# ball_finder

./: readme.txt
maps/: challenge_map.pgm  challenge_map.yaml  mod_map.pgm
mybot_control/: CMakeLists.txt  setup.py
mybot_control/launch/: mybot_control_with_nav.launch
mybot_control/maps/: map.pgm  map.yaml
mybot_control/nodes/: ball_control.py  detect_red_ball  goal.py  grab_ball.py  navigate
mybot_control/param/: costmap_common_params.yaml
mybot_description/config/: control.yaml
mybot_description/launch/: gazebo.launch  mybot_rviz.launch  rviz.launch
mybot_description/urdf/: bot.gazebo.xacro  bot.urdf.xacro  mybot.gazebo  turtlebot3_waffle.urdf.xacro
mybot_description/urdf/robot_model/: bot.gazebo.xacro  bot.urdf.xacro
mybot_description/urdf/turtlebot/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
mybot_description/urdf/turtlebot/backup/: turtlebot3_waffle.gazebo.xacro  (+1 more)
mybot_description/worlds/: ball.world
mybot_gazebo/launch/: challenge-world-t1.launch~b6e0a66475d50226c6585ba5708770efc790119f  challenge-world-t3.launch  challenge-world-t4.launch  for_mapping.launch  mybot_world.launch  mybot_world_old.launch  turtlebot3.launch
mybot_gazebo/worlds/: challenge-world-test-redballaroundcorner  challenge-world-test-redballeasy
mybot_nav/: CMakeLists.txt  package.xml
mybot_nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml
src/mybot_control/: package.xml
src/mybot_control/launch/: mybot_control.launch
src/mybot_description/src/: ball_control.py
src/mybot_gazebo/launch/: mybot_world.launch
(+4 files in other folders)
